--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           </li>
           <li>
             <details class="panel">
-              <img class="event-img" src="/images/crid inaggaration.jpeg" >
+              <img class="event-img" src="images/crid inaggaration.jpeg" >
               <summary>CRID Inauguration</summary>
               <div class="date">7 OCT 2022</div>
               <p>Congratulations on a successful inauguration! Wishing you continued success in your future endeavors.</p>
@@ -244,7 +244,7 @@
           </li> 
           <li>
             <details class="panel">
-              <img class="event-img" src="/images/web dev.webp" >
+              <img class="event-img" src="images/web dev.webp" >
               <summary>Web Development Bootcamp </summary>
               <div class="date">30 jan 2022</div>
               <p>CRID in collaboration With ABIT successfully conducted a two day bootcamp on "Web Development"
@@ -254,7 +254,7 @@
           </li>
           <li>
             <details class="panel">
-              <img class="event-img" height="650px" src="/images/power BI.webp" >
+              <img class="event-img" height="650px" src="images/power BI.webp" >
               <summary>Microsoft Power BI</summary>
               <div class="date">9 feb 2023</div>
               <p>We are excited to share the success of our recent Microsoft Power BI event! Attendees learned from
@@ -264,7 +264,7 @@
           </li>
           <li>
             <details class="panel">
-              <img class="event-img"  src="/images/DS crid.jpeg" >
+              <img class="event-img"  src="images/DS crid.jpeg" >
               <summary>Data-science Event</summary>
               <div class="date">16 feb 2023</div>
               <p>CRID conducted a comprehensive bootcamp on Data Science!! Thanks to Our speaker Niraj Mohabey to guide through it.</p>
