--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
      <!--Magazine-->
      <div class="magazine">
       <div class="page">
-        <img src="/images/center-image.jpg" alt="Image 1">
+        <img src="images/center-image.jpg" alt="Image 1">
       </div>
       <div class="page">
-        <img src="/images/left-image.jpg" alt="Image 2">
+        <img src="images/left-image.jpg" alt="Image 2">
       </div>
     </div>
     <div class="download-container">
-      <a href="/magazines/SCIPIA First edition.pdf" class="download-button">Download PDF</a>
+      <a href="magazines/SCIPIA First edition.pdf" class="download-button">Download PDF</a>
     </div>
 
 
